# fastapi_sqlalchemy_postgresql

./: .env  README.md  alembic.ini  pyproject.toml
apps/: main.py
apps/api/: router.py  user.py
apps/core/: config.py  security.py
apps/db/: postgresql.py
apps/models/: base.py  user.py
apps/schemas/: user.py
apps/services/: user.py
migrations/: env.py
migrations/versions/: 5d7f82223807_initial_migration.py
tests/: test.py
